# 3d_task_QT

./: .gitignore  CMakeLists.txt  README.md
Debug/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
Debug/.cmake/api/v1/reply/: cache-v2-f942369b0bd6292d1a0f.json  cmakeFiles-v1-ec29685ee5403680b5f9.json  codemodel-v2-14862f59cc7b24cf814d.json  index-2023-03-30T05-38-55-0566.json  target-client-Debug-4f69c0ed909b0bd9a6a6.json  target-client_autogen-Debug-75d603eeb7298541a6f0.json  target-server-Debug-8c04cf0472bbfbc7797e.json
Debug/client/: Makefile  client  client.cbp  cmake_install.cmake  response.txt
Debug/client/client_autogen/: moc_predefs.h
Debug/client/client_autogen/EWIEGA46WW/: moc_clientmainwindow.cpp
Debug/client/client_autogen/include/: ui_clientmainwindow.h
Debug/server/: Makefile  TestTask_OM_T3_Junior_Embedded_3d_task.cbp  cmake_install.cmake  server  server.cbp
client/: CMakeLists.txt  clientmainwindow.cpp  clientmainwindow.h  clientmainwindow.ui  main.cpp
client/Debug/: CMakeCache.txt  Makefile  client.cbp  cmake_install.cmake
client/Debug/.cmake/api/v1/reply/: cache-v2-dbf283cd587c183ddd1c.json  cmakeFiles-v1-1850797f5e10a56c5969.json  codemodel-v2-e8b6166dff51a8076e47.json  index-2023-03-30T05-22-36-0724.json  target-client-Debug-33906113b3b5a3f3cba9.json  target-client_autogen-Debug-0b9502b2b1916ca417c1.json
server/: CMakeLists.txt
