cmake_minimum_required(VERSION 3.5)

project(client LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


find_package(Qt5 COMPONENTS Widgets REQUIRED)

add_executable(client
main.cpp
clientmainwindow.cpp
clientmainwindow.h
clientmainwindow.ui
)

target_link_libraries(client PUBLIC ${Boost_LIBRARIES})


target_link_libraries(client PRIVATE Qt5::Widgets)
